--- a/.github/workflows/flake-build.yml
+++ b/.github/workflows/flake-build.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      CACHIX_SIGNING_KEY: ${{ secrets.CACHIX_SIGNING_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,12 +30,12 @@ jobs:
 
       # Push to Cachix only when secrets are available (e.g., not on forked PRs).
       - name: Configure Cachix (push)
-        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' && secrets.CACHIX_SIGNING_KEY != '' }}
+        if: ${{ env.CACHIX_AUTH_TOKEN != '' && env.CACHIX_SIGNING_KEY != '' }}
         uses: cachix/cachix-action@v14
         with:
           name: kc-nixpkgs
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
+          authToken: ${{ env.CACHIX_AUTH_TOKEN }}
+          signingKey: ${{ env.CACHIX_SIGNING_KEY }}
 
       - name: Build flake default
         run: nix build .#default --print-build-logs
