--- a/.github/workflows/flake-build.yml
+++ b/.github/workflows/flake-build.yml
@@ -12,9 +12,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      CACHIX_SIGNING_KEY: ${{ secrets.CACHIX_SIGNING_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,15 +25,24 @@ jobs:
             substituters = https://cache.nixos.org https://kc-nixpkgs.cachix.org
             trusted-public-keys = kc-nixpkgs.cachix.org-1:wmUYuse/dt4a6Mtxw06RN4I3TySq+oe3NPvierfAaG0=
 
-      # Push to Cachix only when secrets are available (e.g., not on forked PRs).
-      - name: Configure Cachix (push)
-        if: ${{ env.CACHIX_AUTH_TOKEN != '' && env.CACHIX_SIGNING_KEY != '' }}
+      # Configure Cachix for pushing (only when secrets are available, e.g., not on forked PRs).
+      - name: Configure Cachix
+        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' && secrets.CACHIX_SIGNING_KEY != '' }}
         uses: cachix/cachix-action@v14
         with:
           name: kc-nixpkgs
-          authToken: ${{ env.CACHIX_AUTH_TOKEN }}
-          signingKey: ${{ env.CACHIX_SIGNING_KEY }}
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
 
       - name: Build flake default
         run: nix build .#default --print-build-logs
+
+      # Explicitly push built store paths to Cachix (only when secrets are available).
+      # The cachix-action installs cachix and configures authentication.
+      - name: Push to Cachix
+        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' && secrets.CACHIX_SIGNING_KEY != '' }}
+        run: nix build --no-link --print-out-paths .#default | cachix push kc-nixpkgs
+        env:
+          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          CACHIX_SIGNING_KEY: ${{ secrets.CACHIX_SIGNING_KEY }}
 
