--- a/.github/workflows/flake-build.yml
+++ b/.github/workflows/flake-build.yml
@@ -25,9 +25,19 @@ jobs:
             substituters = https://cache.nixos.org https://kc-nixpkgs.cachix.org
             trusted-public-keys = kc-nixpkgs.cachix.org-1:wmUYuse/dt4a6Mtxw06RN4I3TySq+oe3NPvierfAaG0=
 
+      # Check if Cachix secrets are available (for forked PRs, secrets may not be available).
+      - name: Check Cachix secrets
+        id: check_cachix
+        run: |
+          if [[ -n "${{ secrets.CACHIX_AUTH_TOKEN }}" && -n "${{ secrets.CACHIX_SIGNING_KEY }}" ]]; then
+            echo "cachix_available=true" >> $GITHUB_ENV
+          else
+            echo "cachix_available=false" >> $GITHUB_ENV
+          fi
+
       # Configure Cachix for pushing (only when secrets are available, e.g., not on forked PRs).
       - name: Configure Cachix
-        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' && secrets.CACHIX_SIGNING_KEY != '' }}
+        if: env.cachix_available == 'true'
         uses: cachix/cachix-action@v14
         with:
           name: kc-nixpkgs
@@ -41,7 +51,7 @@ jobs:
       # The cachix-action installs cachix and configures authentication.
       # Push the runtime closure of the result (all store paths needed to run it).
       - name: Push to Cachix
-        if: ${{ secrets.CACHIX_AUTH_TOKEN != '' && secrets.CACHIX_SIGNING_KEY != '' }}
+        if: env.cachix_available == 'true'
         run: nix path-info -r ./result | cachix push kc-nixpkgs
         env:
           CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
